Sat Feb 26 22:05:03 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Collection.h, htsearch/Collection.cc: New files
	contributed by Rajendra Inamdar <inamdar@beasys.com>.

	* htsearch/Makefile.am, htsearch/Makefile.in: Compile them.

	* htcommon/defaults.cc: Add new collection_names attribute as
	described by Rajendra.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

	* htsearch/Display.h, htsearch/Display.cc: Loop through
	collections as we are assembling results.
	(buildMatchList): Use 1.0 as minimum score and take log(score) as
	the final score. This requires an increase in magnitude in weight
	to correspond to a factor of increase in score.

	* htsearch/DocMatch.h, htsearch/DocMatch.cc: Keep track of the
	collection we're in.

	* htsearch/ResultMatch.h: Ditto.

	* htsearch/htsearch.h, htsearch/htsearch.cc: Wrap results in
	collections.

	* htsearch/parser.h, htsearch/parser.cc: Set the collection for
	the results--we use this to get to the appropriate word DB.
	(score): Divide word weights by word frequency to calibrate for
	expected Zipf's law. Rare words should count more.
	
Fri Feb 25 11:19:47 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (maximum_pages): Describe new bahaviour (as of
	3.1.4), where this limits total matches shown.
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Thu Feb 24 14:43:06 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htnet/HtFile.cc (Request): Fix silly typo.

	* htlib/DB2_db.cc: Remove include of malloc.h, as it causes problems
	on some systems (e.g. Mac OS X), and all we need should be in stdlib.h.

Thu Feb 24 13:11:15 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htnet/HtFile.cc (Request): Don't append more than _max_document_size
	bytes to _contents string, set _content_length to size returned by
	stat().